verseghy-website/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: app
          image: verseghy/website_backend
          ports:
            - containerPort: 80
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /var/www/storage
              name: backend-persistent-storage
            - mountPath: /var/www/bootstrap/cache
              name: cache
      volumes:
        - name: backend-persistent-storage
          persistentVolumeClaim:
            claimName: backend-pv-claim
        - name: cache
          emptyDir: {}
