verseghy-website/backend/route-storage.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend-storage
spec:
  host: verseghy-gimnazium.net
  path: '/storage'
  to:
    kind: Service
    name: backend-svc
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
