verseghy-website/backend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
spec:
  host: backend.microshift.verseghy-gimnazium.net
  to:
    kind: Service
    name: backend-svc
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
